--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
  language: node_js
  node_js:
-   - "0.8"
-   - "0.6"
-   notifications:
+    - "0.8"
+    - "0.6"
+    notifications:
  email:
     recipients:
-      - yunniihi@gmail.com
+        - yunniihi@gmail.com
+ before_install:
+    - "export DISPLAY=:99.0"
+    - "sh -e /etc/init.d/xvfb start"
+    - "phantomjs qunit/addons/phantomjs/runner.js tests/modelTest.html"
+    - "phantomjs qunit/addons/phantomjs/runner.js tests/collectionTest.html"
+    - "phantomjs qunit/addons/phantomjs/runner.js tests/EventsTest.html"
