--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@
  email:
     recipients:
         - yunniihi@gmail.com
- before_install:
-    - "export DISPLAY=:99.0"
-    - "sh -e /etc/init.d/xvfb start"
+ script:
     - "phantomjs qunit/addons/phantomjs/runner.js tests/modelTest.html"
     - "phantomjs qunit/addons/phantomjs/runner.js tests/collectionTest.html"
     - "phantomjs qunit/addons/phantomjs/runner.js tests/EventsTest.html"
