--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@
     recipients:
         - yunniihi@gmail.com
  script:
-    - "phantomjs qunit/addons/phantomjs/runner.js tests/modelTest.html"
-    - "phantomjs qunit/addons/phantomjs/runner.js tests/collectionTest.html"
-    - "phantomjs qunit/addons/phantomjs/runner.js tests/EventsTest.html"
-    - "phantomjs qunit/addons/phantomjs/runner.js tests/eventTest.html"
+     phantomjs qunit/addons/phantomjs/runner.js tests/modelTest.html
+     phantomjs qunit/addons/phantomjs/runner.js tests/collectionTest.html
+     phantomjs qunit/addons/phantomjs/runner.js tests/EventsTest.html
+     phantomjs qunit/addons/phantomjs/runner.js tests/eventTest.html
