--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@
  email:
     recipients:
         - yunniihi@gmail.com
+ branches:
+  only:
+    - gh-pages
  script:
      phantomjs qunit/addons/phantomjs/runner.js tests/modelTest.html
      phantomjs qunit/addons/phantomjs/runner.js tests/collectionTest.html
