--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@
  node_js:
     - "0.8"
     - "0.6"
-    notifications:
- email:
-    recipients:
+ notifications:
+    email:
         - yunniihi@gmail.com
  branches:
   only:
     - gh-pages
- script:
-     phantomjs qunit/addons/phantomjs/runner.js tests/modelTest.html
+ script: phantomjs qunit/addons/phantomjs/runner.js tests/modelTest.html
      phantomjs qunit/addons/phantomjs/runner.js tests/collectionTest.html
      phantomjs qunit/addons/phantomjs/runner.js tests/EventsTest.html
      phantomjs qunit/addons/phantomjs/runner.js tests/eventTest.html
